--- a/ansible-playbooks/templates/arista_vlans.j2
+++ b/ansible-playbooks/templates/arista_vlans.j2
@@ -1,7 +1,7 @@
 !
 ! VLAN Configuration
-{% if netbox_config_context.vlans is defined %}
-{% for vlan in netbox_config_context.vlans %}
+{% if config_context.vlans is defined %}
+{% for vlan in config_context.vlans %}
 vlan {{ vlan.vid }}
    name {{ vlan.name }}
 !
