--- a/ansible-playbooks/templates/arista_base.j2
+++ b/ansible-playbooks/templates/arista_base.j2
@@ -3,21 +3,21 @@
 hostname {{ inventory_hostname }}
 !
 ! DNS Configuration
-{% if netbox_config_context.dns_servers is defined %}
-{% for dns in netbox_config_context.dns_servers %}
+{% if config_context.dns_servers is defined %}
+{% for dns in config_context.dns_servers %}
 ip name-server vrf default {{ dns }}
 {% endfor %}
 {% endif %}
 !
 ! NTP Configuration
-{% if netbox_config_context.ntp_servers is defined %}
-{% for ntp in netbox_config_context.ntp_servers %}
+{% if config_context.ntp_servers is defined %}
+{% for ntp in config_context.ntp_servers %}
 ntp server {{ ntp }}
 {% endfor %}
 {% endif %}
 !
 ! Timezone
-clock timezone {{ netbox_config_context.timezone | default('UTC') }}
+clock timezone {{ config_context.timezone | default('UTC') }}
 !
 ! Banner - Customized by device role
 banner motd
@@ -46,16 +46,16 @@ banner motd
 EOF
 !
 ! SNMP Configuration
-{% if netbox_config_context.snmp_community is defined %}
-snmp-server community {{ netbox_config_context.snmp_community }} ro
+{% if config_context.snmp_community is defined %}
+snmp-server community {{ config_context.snmp_community }} ro
 {% endif %}
-{% if netbox_config_context.snmp_location is defined %}
-snmp-server location {{ netbox_config_context.snmp_location }}
+{% if config_context.snmp_location is defined %}
+snmp-server location {{ config_context.snmp_location }}
 {% endif %}
 !
 ! Logging
-{% if netbox_config_context.syslog_servers is defined %}
-{% for syslog in netbox_config_context.syslog_servers %}
+{% if config_context.syslog_servers is defined %}
+{% for syslog in config_context.syslog_servers %}
 logging host {{ syslog }}
 {% endfor %}
 {% endif %}
