--- a/ansible-playbooks/templates/arista_interfaces.j2
+++ b/ansible-playbooks/templates/arista_interfaces.j2
@@ -1,7 +1,7 @@
 !
 ! Physical Interfaces
-{% if netbox_config_context.interfaces is defined %}
-{% for interface in netbox_config_context.interfaces %}
+{% if config_context.interfaces is defined %}
+{% for interface in config_context.interfaces %}
 interface {{ interface.name }}
    {% if interface.description is defined %}
    description {{ interface.description }}
