--- a/ansible-playbooks/templates/arista_vxlan.j2
+++ b/ansible-playbooks/templates/arista_vxlan.j2
@@ -1,7 +1,7 @@
 !
 ! VXLAN Configuration
-{% if netbox_config_context.vxlan is defined %}
-{% set vxlan = netbox_config_context.vxlan %}
+{% if config_context.vxlan is defined %}
+{% set vxlan = config_context.vxlan %}
 
 ! Loopback for VTEP
 {% if vxlan.vtep_loopback is defined %}
