--- a/ansible-playbooks/templates/arista_base.j2
+++ b/ansible-playbooks/templates/arista_base.j2
@@ -66,7 +66,7 @@ interface Management1
    description Management Interface
    ip address {{ ansible_host }}/24
 !
-ip route 0.0.0.0/0 172.20.20.1 #to be updated to a dynamic value later
+ip route 0.0.0.0/0 172.20.20.1
 !
 ! AAA
 aaa authorization exec default local
