--- a/ansible-playbooks/templates/arista_vlans.j2
+++ b/ansible-playbooks/templates/arista_vlans.j2
@@ -2,8 +2,8 @@
 ! VLAN Configuration
 {% if vlans is defined %}
 {% for vlan in vlans %}
-vlan {{ vlan.values.vid }}
-   name {{ vlan.values.name }}
+vlan {{ vlan.value.vid }}
+   name {{ vlan.value.name }}
 !
 {% endfor %}
 {% endif %}
