--- a/ansible-playbooks/templates/arista_bgp.j2
+++ b/ansible-playbooks/templates/arista_bgp.j2
@@ -1,7 +1,11 @@
 !
 ! BGP Loopback0 (Router ID)
-{% set loopback0 = interfaces.get(name='Loopback0') %}
-{% if loopback0  is defined %}
+{% for intf in interfaces %}
+{% if intf.name == "Loopback0" %}
+{% set loopback0 = intf %}
+{% endif %}
+{% endfor %}
+{% if loopback0 is defined %}
 interface Loopback0
    description BGP Router ID
    ip address {{ loopback0.ip_addresses.first().address }}
