sanity check if loopback1 exists before referencing

--- a/ansible-playbooks/templates/arista_vxlan.j2
+++ b/ansible-playbooks/templates/arista_vxlan.j2
@@ -5,7 +5,7 @@
 {% set loopback1 = intf %}
 {% endif %}
 {% endfor %}
-{% if loopback1 and loopback1.ip_addresses.first() %}
+{% if loopback1 is defined and loopback1.ip_addresses.first() %}
 interface Loopback1
    description VTEP Loopback
    ip address {{ loopback1.ip_addresses.first().address }}
