--- a/ansible-playbooks/templates/arista_bgp.j2
+++ b/ansible-playbooks/templates/arista_bgp.j2
@@ -40,7 +40,7 @@ route-map {{ rm.name }} {{ rm.action }} {{ rm.sequence }}
 
 ! BGP Configuration
 router bgp {{ bgp.asn }}
-   {% if loopback0 is defined }}
+   {% if loopback0 is defined %}}
    router-id {{ loopback0.ip_addresses.first().address[:-3] }}
    {% endif %}
    {% if bgp.maximum_paths is defined %}
