--- a/ansible-playbooks/templates/arista_vlans.j2
+++ b/ansible-playbooks/templates/arista_vlans.j2
@@ -1,6 +1,6 @@
 !
 ! VLAN Configuration
-{% if vlans is defined and if device.device_role.slug == "leaf"%}
+{% if vlans is defined and device.device_role.slug == "leaf"%}
 {% for vlan in vlans %}
 vlan {{ vlan.value.vid }}
    name {{ vlan.value.name }}
